# pgpad

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  download-certs.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: renovate.json
.github/workflows/: ci.yml  containerize.yml  release.yml
docker/: runtime-entrypoint.sh
e2e/: README.md  package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e/specs/: smoke.e2e.ts
pgpad-core/: Cargo.toml
pgpad-core/migrations/: 001.sql  002.sql
pgpad-core/src/: credentials.rs  database.rs  error.rs  lib.rs  storage.rs  utils.rs
pgpad-core/src/database/: commands.rs  connection_monitor.rs  services.rs  sqlite.rs  types.rs
pgpad-core/src/database/postgres/: connect.rs  execute.rs  parser.rs  row_writer.rs  schema.rs  tls.rs
pgpad-core/src/database/postgres/row_writer/: interval.rs  record.rs
pgpad-core/src/database/sqlite/: parser.rs  row_writer.rs  schema.rs
pgpad-native/: Cargo.toml  index.html
pgpad-native/src/: app.rs  lib.rs  main.rs  model.rs  style.rs  widgets.rs
pgpad-web/: Cargo.toml
pgpad-web/src/: lib.rs  main.rs
pgpad-web/tests/: commands.rs
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001.sql  003.sql  004.sql  005.sql  006.sql  007.sql
src-tauri/src/: commands.rs  credentials.rs  database.rs  database_commands.rs  error.rs  init.rs  lib.rs  lsp.rs  main.rs  postgres.rs  storage.rs  utils.rs
src-tauri/src/commands/: database.rs  default.rs  errors.rs
src-tauri/src/database/: commands.rs  connection_monitor.rs  export.rs  parser.rs  postgres.rs  sqlite.rs  stmt_manager.rs  types.rs
src-tauri/src/database/duckdb/: execute.rs  mod.rs  parser.rs  row_writer.rs  schema.rs
src-tauri/src/database/mssql/: connect.rs  execute.rs  mod.rs  parser.rs  row_writer.rs  schema.rs  tests.rs
src-tauri/src/database/oracle/: connect.rs  execute.rs  mod.rs  numeric.rs  parser.rs  row_writer.rs  schema.rs  tests.rs
src-tauri/src/database/postgres/: connect.rs  execute.rs  row_writer.rs  schema.rs  tls.rs
src-tauri/src/database/postgres/row_writer/: interval.rs  null.rs  numeric.rs  record.rs
src-tauri/src/database/sqlite/: execute.rs  parser.rs  row_writer.rs  schema.rs
src-tauri/src/lsp/: parser.rs
src-tauri/src/postgres/: commands.rs  connect.rs  connection_monitor.rs  query.rs  row_writer.rs  tls.rs  types.rs
src-tauri/src/postgres/row_writer/: bytes.rs
src-tauri/src/utils/: condvar.rs
src-tauri/src/window/: commands.rs
src/lib/: backend.ts  codemirror.ts  commands.svelte.ts  lsp-transport.ts  monaco.ts  queryExecutor.svelte.ts  queryExecutor.test.ts  sqlCompletionContext.ts  webToken.test.ts  webToken.ts
src/lib/components/: AppSidebar.svelte  ConnectionForm.svelte  ConnectionSidebar.svelte  Connections.svelte  DatabaseSchemaItems.svelte  HelloWorld.svelte  JsonInspector.svelte  JsonViewer.svelte  KeyboardShortcuts.svelte  Logo.svelte  Main.svelte  MissingWebToken.svelte  PostgresEditor.svelte  QueryHistory.svelte  QueryResultsTable.svelte  QueryResultsView.svelte  ScriptTabs.svelte  Scripts.svelte  Settings.svelte  SqlEditor.svelte  StatementExecutor.svelte  StreamingQueryResults.svelte  Table.svelte  TableBrowseModal.svelte  TableBrowseView.svelte  ThemeToggle.svelte  TitleBar.svelte
src/lib/components/mssql/: MssqlIndexesPanel.svelte
src/lib/components/oracle/: OracleIndexesPanel.svelte
src/lib/components/ui/: FormRow.svelte  TabBar.svelte
src/lib/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion.svelte  index.ts
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/data-table/: data-table.svelte.ts  index.ts
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/kbd/: kbd.svelte
src/lib/components/ui/resizable/: resizable-handle.svelte  resizable-pane-group.svelte
src/lib/platform/: theme.ts
src/lib/stores/: fontSize.ts  tabs.svelte.ts  theme.ts
src/lib/utils/: cell-formatter.test.ts  cell-formatter.ts
