[package]
name = "pgpad-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "GPLv3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.34.2"
egui = "0.34.2"
egui-phosphor = "0.12.0"
egui_extras = "0.34.2"
egui_tiles = "0.15.0"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
