[package]
name = "pgpad-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
axum = "0.8"
dirs = "6.0.0"
log = "0.4"
pgpad-core = { path = "../pgpad-core" }
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1.0", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tempfile = "3.23"
tower = { version = "0.5", features = ["util"] }
