[package]
name = "pgpad-tauri"
version = "1.0.0"
description = ""
authors = ["vrmiguel"]
license = "GPLv3"
edition = "2021"

[lib]
name = "pgpad_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
pgpad-core = { path = "../pgpad-core" }
tauri = { version = "2.10.1", features = ["macos-private-api"] }
